2010-06-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/Makefile.am: Not to install header files.
	* src/betaradio.c: Not to blink icon.

2010-06-25  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* data/radio-off.png,
	data/radio-on.png,
	src/channel.c,
	src/channel.h,
	src/eggtrayicon.c,
	src/eggtrayicon.h,
	src/radiosite.c,
	src/radiosite.h,
	src/sitelist.h: Remove unneeded files.
	* data/betaradio.png: Change new icon.
	* configure.ac,
	data/Makefile.am,
	src/Makefile.am: Update autotools config.
	* po/POTFILES.in,
	po/zh_TW.po: Update language translation.
	* src/betaradio.c,
	src/gstplay.c,
	src/streamplayer.h -> src/gstplay.h: Apply to new architechure design.

2010-06-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* web/player.html,
	web/player.ico,
	web/Icon.png: Update site icon.
	* web/player.html,
	web/hichannel.json: Update to jQuery 1.4.2

2010-01-17  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* web/radio-128.png,
	web/radio-19.png,
	web/radio-32.png,
	web/radio-48.png,
	web/Icon.png: Keep one 128x128 icon.
	* web/player.css,
	web/player.html,
	web/player.js: Adjust UI.
	* utils/hichannel.html,
	utils/hichannel.py,
	utils/hichannel.yaml,
	web/hichannel.json: Update list.
	* web/player.html: Add site icon.

2010-01-13  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/jquery.cookie.js,
	utils/player.html,
	utils/player.js: Remember last channel.
	* web/hichannel.json,
	web/jquery.cookie.js,
	web/jquery.timers.js,
	web/player.css,
	web/player.html,
	web/player.js,
	web/radio-128.png,
	web/radio-19.png,
	web/radio-32.png,
	web/radio-48.png: Move to folder 'web'.
	* web/player.js: Improve Safari.
	* web/player.js: Improve Safari on Mac only.

2010-01-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/radio-32.png,
	utils/radio-19.png,
	utils/radio-128.png,
	utils/radio-48.png: Add icons with Public Domain license from
	http://openclipart.org/media/files/neoguiri/8233
