@@ -129,7 +129,7 @@ int main(int argc, char *argv[])
 
     gtk_menu_shell_append(GTK_MENU_SHELL(menu), gtk_separator_menu_item_new());
 
-    if (json->http(json, "http://fd.idv.tw/radio/hichannel.json")->isObject(json) == true &&
+    if (json->http(json, "http://betaradio.googlecode.com/svn/trunk/utils/hichannel.json")->isObject(json) == true &&
         json->object(json, "category")->isArray(json) == true) {
         unsigned int i = 0;
         unsigned int length = json->length(json);
