@@ -1,41 +1,0 @@
-body {
-    color: #dcdcdc;
-    background-color: black;
-    text-align: center;
-    font-weight: bold;
-}
-
-a {
-    color: #dcdcdc;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-select, input {
-    color: #dcdcdc;
-    border: #dcdcdc 1px solid;
-    background-color: black;
-}
-
-fieldset {
-    border: #dcdcdc 2px solid;
-    font-weight: bold;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-}
-
-div#panel {
-    position: fixed;
-}
-
-div#tuner {
-    font-weight: bold;
-    position: fixed;
-    margin: 5px;
-}
-
-div#player {
-    position: fixed;
-    margin: 5px;
-}
