@@ -1,28 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Taiwan Radio Tuner</title>
-        <link rel="shortcut icon" type="image/x-icon" href="player.ico">
-        <link rel="stylesheet" type="text/css" href="player.css">
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-        <script type="text/javascript" src="jquery.cookie.js"></script>
-        <script type="text/javascript" src="jquery.timers.js"></script>
-        <script type="text/javascript" src="player.js"></script>
-    </head>
-    <body>
-        <div id='panel'>
-            <fieldset id='tuner'>
-                <legend>Taiwan Radio Tuner</legend>
-                <select id="category"></select>
-                <select id="channel"></select>
-                <input id='control' type='button' value='▶'>
-                <br>
-                <input id='alarm' type='checkbox'>Alarm:
-                <select id="hour"></select>
-                <select id="minute"></select>
-            </fieldset>
-            <div id='player'></div>
-        </div>
-    </body>
-</html>
